Changement de lien pour les URL (et aussi pour s'y retrouver plus facilement).

--- a/accessoires/menu.html
+++ b/accessoires/menu.html
@@ -77,7 +77,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/admin">
+                            <a href="admin/">
                                 <span class=""></span> Panneau d'administration
                             </a>
                         </li>
