--- a/admin/menu/forums.html
+++ b/admin/menu/forums.html
@@ -1,11 +1,11 @@
 <div class="menu-block">
     <div class="header">Gérer les forums</div>
     <ul>
-        <li <?php if(!isset($_GET['j'])|| $_GET['j']==1) echo 'id="activemenu"'; ?>>
-            <a href="index.php?i=3&j=1"><span>Gérer les forums</span></a>
+        <li <?php if(!isset($_GET['j'])|| $_GET['j']=='edit_forum') echo 'id="activemenu"'; ?>>
+            <a href="index.php?i=forums&j=edit_forum"><span>Gérer les forums</span></a>
         </li>
-        <li <?php if(isset($_GET['j'])&& $_GET['j']==2) echo 'id="activemenu"'; ?>>
-            <a href="index.php?i=3&j=2"><span>Délester les forums</span></a>
+        <li <?php if(isset($_GET['j'])&& $_GET['j']=='delete_forum') echo 'id="activemenu"'; ?>>
+            <a href="index.php?i=forums&j=delete_forum"><span>Délester les forums</span></a>
         </li>
     </ul>
 </div>
@@ -13,11 +13,11 @@
 <div class="menu-block">
     <div class="header">Permissions basiques des forums</div>
     <ul>
-        <li <?php if(isset($_GET['j'])&& $_GET['j']==3) echo 'id="activemenu"'; ?>>
-            <a href="index.php?i=3&j=3"><span>Permissions des forums</span></a>
+        <li <?php if(isset($_GET['j'])&& $_GET['j']=='restrict_forum') echo 'id="activemenu"'; ?>>
+            <a href="index.php?i=forums&j=restrict_forum"><span>Permissions des forums</span></a>
         </li>
-        <li <?php if(isset($_GET['j'])&& $_GET['j']==4) echo 'id="activemenu"'; ?>>
-            <a href="index.php?i=3&j=4"><span>Permissions utilisateurs/forums</span></a>
+        <li <?php if(isset($_GET['j'])&& $_GET['j']=='restrict_user') echo 'id="activemenu"'; ?>>
+            <a href="index.php?i=forums&j=restrict_user"><span>Permissions utilisateurs/forums</span></a>
         </li>
     </ul>
 </div>
