--- a/admin/index.html
+++ b/admin/index.html
@@ -46,13 +46,13 @@
         <div><!--Barre de navigation-->
             <div  id="tabs">
                 <ul>
-                    <li class="tabs <?php if(!isset($_GET['i'])|| $_GET['i']==1) echo 'activetab' ?>"><a href="?i=1">Général</a></li>
-                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']==2) echo 'activetab' ?> "><a href="?i=2">Club</a></li>
-                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']==3) echo 'activetab' ?>"><a href="?i=3">Forums</a></li>
-                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']==4) echo 'activetab' ?>"><a href="?i=4">Messages</a></li>
-                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']==5) echo 'activetab' ?>"><a href="?i=5">Utilisateurs</a></li>
-                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']==6) echo 'activetab' ?>"><a href="?i=6">Maintenance</a></li>
-                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']==7) echo 'activetab' ?>"><a href="?i=7">Liste des jeux</a></li>
+                    <li class="tabs <?php if(!isset($_GET['i'])|| $_GET['i']=='general') echo 'activetab' ?>"><a href="?i=general">Général</a></li>
+                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']=='club') echo 'activetab' ?> "><a href="?i=club">Club</a></li>
+                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']=='forums') echo 'activetab' ?>"><a href="?i=forums">Forums</a></li>
+                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']=='messages') echo 'activetab' ?>"><a href="?i=messages">Messages</a></li>
+                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']=='utilisateurs') echo 'activetab' ?>"><a href="?i=utilisateurs">Utilisateurs</a></li>
+                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']=='maintenance') echo 'activetab' ?>"><a href="?i=maintenance">Maintenance</a></li>
+                    <li class="tabs <?php if(isset($_GET['i']) && $_GET['i']=='liste_jeux') echo 'activetab' ?>"><a href="?i=liste_jeux">Liste des jeux</a></li>
                 </ul>
             </div>
             <div id="acp">
@@ -67,22 +67,30 @@
                                 {
                                     switch($_GET['i'])
                                     {
-                                        case "1" :  include_once("menu/general.html");
-                                                    break;
-                                        case "2" :  include_once("menu/club.html");
-                                                    break;
-                                        case "3" :  include_once("menu/forums.html");
-                                                    break;
-                                        case "4" :  include_once("menu/messages.html");
-                                                    break;
-                                        case "5" :  include_once("menu/utilisateurs.html");
-                                                    break;
-                                        case "6" :  include_once("menu/maintenance.html");
-                                                    break;
-                                        case "7" :  include_once("menu/liste_jeux.html");
-                                                    break;
-                                        default  :  include_once("menu/general.html");
-                                                    break;
+                                        case "general" :
+                                            include_once("menu/general.html");
+                                            break;
+                                        case "club" :
+                                            include_once("menu/club.html");
+                                            break;
+                                        case "forums" :
+                                            include_once("menu/forums.html");
+                                            break;
+                                        case "messages" :
+                                            include_once("menu/messages.html");
+                                            break;
+                                        case "utilisateurs" :
+                                            include_once("menu/utilisateurs.html");
+                                            break;
+                                        case "maintenance" :
+                                            include_once("menu/maintenance.html");
+                                            break;
+                                        case "liste_jeux" :
+                                            include_once("menu/liste_jeux.html");
+                                            break;
+                                        default  :
+                                            include_once("menu/general.html");
+                                            break;
                                     }
                                 }
                                 else
@@ -97,22 +105,30 @@
                             {
                                 switch($_GET['i'])
                                 {
-                                    case "1" :  include_once("main/general.php");
-                                                break;
-                                    case "2" :  include_once("main/club.php");
-                                                break;
-                                    case "3" :  include_once("main/forums.php");
-                                                break;
-                                    case "4" :  include_once("main/messages.php");
-                                                break;
-                                    case "5" :  include_once("main/utilisateurs.php");
-                                                break;
-                                    case "6" :  include_once("main/maintenance.php");
-                                                break;
-                                    case "7" :  include_once("main/liste_jeux.php");
-                                                break;
-                                    default  :  include_once("main/general.php");
-                                                break;
+                                    case "general" :
+                                        include_once("main/general.php");
+                                        break;
+                                    case "club" :
+                                        include_once("main/club.php");
+                                        break;
+                                    case "forums" :
+                                        include_once("main/forums.php");
+                                        break;
+                                    case "messages" :
+                                        include_once("main/messages.php");
+                                        break;
+                                    case "utilisateurs" :
+                                        include_once("main/utilisateurs.php");
+                                        break;
+                                    case "maintenance" :
+                                        include_once("main/maintenance.php");
+                                        break;
+                                    case "liste_jeux" :
+                                        include_once("main/liste_jeux.php");
+                                        break;
+                                    default  :
+                                        include_once("main/general.php");
+                                        break;
                                 }
                             }
                             else
