--- a/accessoires/menu.html
+++ b/accessoires/menu.html
@@ -77,7 +77,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="admin/">
+                            <a target="_blank" href="admin/">
                                 <span class=""></span> Panneau d'administration
                             </a>
                         </li>
