Documentation du site machiavel fantasy

--- a/admin/main/utilisateurs/inactif_users.html
+++ b/admin/main/utilisateurs/inactif_users.html
@@ -1,1 +1,5 @@
-Uilisateurs inactif
+<h1>Uilisateurs inactif</h1>
+<p>Ceci est la liste des utilisateurs enregistrés et inactif depuis un certain temps. Vous pouvez désactiver ou contacter (en envoyant un e-mail) ces utilisateurs si vous le souhaitez.</p>
+<form>
+
+</form>
