--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<article class="bloc_accueil espace_accueil tbl1"><!-- Le club -->
 				<div class="lien_accueil image boxFULL">
 					<p style="margin:0;" class="image_accueil">
-						<img src="images/icone_site/machiavel_fantasy.jpg" />
+						<img src="images/icone_site/machiavel_fantasy.jpg" alt="club"></img>
 					</p>	
 					<a class="desc" style="text-decoration:none;" href="club.php" >
 						<p style="text-align:justify;">
@@ -48,7 +48,7 @@
 			<article class="bloc_accueil espace_accueil tbl1"><!--Nos jeux-->
 				<div class="lien_accueil image boxFULL">
 					<p style="margin:0;" class="image_accueil">
-						<img src="images/icone_site/jeu-de-des.jpg" />
+						<img src="images/icone_site/jeu-de-des.jpg" alt="jeux"> </img>
 					</p>	
 					<a class="desc" style="text-decoration:none;" href="description.php" >
 						<p style="text-align:justify;">
@@ -62,8 +62,8 @@
 			<article class="bloc_accueil espace_accueil tbl1"><!-- L'agenda -->
 				<div class="lien_accueil image boxFULL">
 					<p style="margin:0;" class="image_accueil">
-						<img src="images/icone_site/calendrier.jpg" />
-					</p>	
+						<img src="images/icone_site/calendrier.jpg" alt="calendrier"></img>
+					</p>
 					<a class="desc" style="text-decoration:none;" href="actualite.php" >
 						<p style="text-align:justify;">
 							<b style="font-size:115%;padding:5px 0;">L'agenda</b><br/>
@@ -76,7 +76,7 @@
 			<article class="bloc_accueil espace_accueil tbl1"><!-- Le forum -->
 				<div class="lien_accueil image boxFULL">
 					<p style="margin:0;" class="image_accueil">
-						<img src="images/icone_site/forum.png" />
+						<img src="images/icone_site/forum.png" alt="forum"></img>
 					</p>	
 					<a class="desc" style="text-decoration:none;" href="forum/" >
 						<p style="text-align:justify;">
