--- a/admin/menu/liste_jeux.html
+++ b/admin/menu/liste_jeux.html
@@ -13,7 +13,7 @@
 <div class="menu-block">
     <div class="header">Catégorie de jeux</div>
     <ul>
-        <li <?php if(!isset($_GET['j'])|| $_GET['j']=='liste_type_jeux') echo 'id="activemenu"'; ?>>
+        <li <?php if(isset($_GET['j']) && $_GET['j']=='liste_type_jeux') echo 'id="activemenu"'; ?>>
         <a href="index.php?i=liste_jeux&j=liste_type_jeux"><span>Gérer les categorie de jeu</span></a>
         </li>
         <li <?php if(isset($_GET['j'])&& $_GET['j']=='ajouter_type_jeux') echo 'id="activemenu"'; ?>>
