--- a/complete_jeu.html
+++ b/complete_jeu.html
@@ -20,7 +20,7 @@
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-		<link 	href="../css/complement.css" rel="stylesheet" type="text/css"/><!--CSS personnaliser-->
+		<link 	href="css/complement.css" rel="stylesheet" type="text/css"/><!--CSS personnaliser-->
 	</head>
 	<body>
 		<?php
