Déplacement du mini calendrier à droite sur toutes les pages. Redimentionement du footer

--- a/accessoires/footer.html
+++ b/accessoires/footer.html
@@ -34,7 +34,7 @@
             </ul>
         </div>
         <div class="copyright">
-            <h4>© machiavel.fr 2014-<?php echo date("Y"); ?><a style="float:right;color: inherit;font-size:10px;" href="#">Retour en haut de page</a></h4>
+            <h4>© machiavel.fr 2014-<?php echo date("Y"); ?><a style="float:right;color: inherit;font-size:10px;margin-right:12px;" href="#">Retour en haut de page</a></h4>
         </div>
     </div>
 </footer>
