--- a/activation.html
+++ b/activation.html
@@ -27,7 +27,7 @@
                 include_once("accessoires/header.html");//logo du site
                 include_once("accessoires/menu.html");//barre de menu
             ?>
-        <div class="col-md-12 contenu">
+        <div class="col-md-10 col-lg-offset-1 contenu">
 			<h3 class="underline">Activation de votre compte</h3>
 			<?php
 				if(!empty($errors[1]))//si vide
