--- a/club.html
+++ b/club.html
@@ -29,60 +29,20 @@
 			include_once("accessoires/header.html");//logo du site
 			include_once("accessoires/menu.html");//barre de menu
 		?>
-		<div class="col-md-2">
-			<?php include_once("accessoires/calendrier_aside.php");
+		<div class="col-md-10 col-lg-offset-1 contenu">
+            <div class="col-md-10 main">
+                <h3 class="media-heading underline">
+                    Le Club
+                </h3>
+                text club
+            </div>
+            <div class="col-md-2" style="padding-right:0;">
+                <?php include_once("accessoires/calendrier_aside.php");
 				  include_once("accessoires/actualite_mini.php");?>
-		</div>
-		<div class="col-md-8">
-			<div class="panel panel-default contenu">
-			  <div class="panel-body">
-				<h3 class="media-heading underline">
-					Le Club
-					<?php if($droits>=2 && !isset($club)){ ?><!--Si l'utilisateur est un administrateur ou un modérateur alors-->
-					<div class="btn-group btn-group-xs" style="float:right;" role="group" aria-label="...">
-					  <a type="button" class="btn btn-default" href="club.php?modifier">
-						<span class="glyphicon glyphicon-repeat" aria-hidden="true"></span><!--bouton pour modifier le jeu-->
-					  </a>
-					  <a type="button" class="btn btn-default" href="club.php?modifier">
-						<span class="glyphicon glyphicon-remove" aria-hidden="true"></span><!--bouton pour supprimer le jeu-->
-					  </a>
-					</div>
-					<?php } ?>					
-				</h3>
-				<?php echo htmlspecialchars_decode($text_club);//Texte du club
-				if (isset($club)){?>
-				<form class="form-horizontal" action="club.php" method="POST">
-				  <div class="form-group">
-					<div contenteditable="true" id="editor1" name="text_jeu" style="width:100%;height:500px;"><?php echo $text_club ; ?></div>
-					<script type="text/javascript">
-						CKEDITOR.env.isCompatible = true;
-						CKEDITOR.inline( 'editor1',{
-							/*toolbar: [
-							 { name: 'document', items: [ 'Source'] },
-							 { name: 'basicstyles', items: [ 'Bold', 'Italic','Strike','Underline', '-', 'RemoveFormat'  ] },
-							 { name: 'insert', items: [ 'Smiley', 'SpecialChar' ,'CodeSnippet', 'EqnEditor'] },
-							 { name: 'colors', items: [ 'TextColor'] },
-							 { name: 'styles', items: [ 'Font', 'FontSize' ] },
-							 { name: 'links', items: [ 'Link'] },
-							 { name: 'paragraph', items: [ 'Blockquote' ] },
-							 ]*/
-						});
-					</script>
-				  </div>
-				  <div class="form-group">
-					<div class="col-sm-offset-2 col-sm-10">
-						<p>
-							<input class="btn btn-default" type="submit" name="ajouter" />
-						</p>
-					</div>
-				  </div>
-				</form>
-				<?php } ?>
-			  </div>			  
-			</div>
-		</div>
-		<?php 
-			include_once("accessoires/chat.php");
+            </div>
+        </div>
+
+		<?php
 			include_once("accessoires/footer.html");
 		?>
 	</body>
