--- a/connexion.html
+++ b/connexion.html
@@ -41,61 +41,56 @@
 			include_once("accessoires/header.html");//logo du site
 			include_once("accessoires/menu.html");//barre de menu
 		?>
-		<div class="col-md-2" style="padding:0 7.5px 0 15px;">
-			<?php include_once("accessoires/calendrier_aside.php");
-				  include_once("accessoires/actualite_mini.php");?>
-		</div>
-		<div class="col-md-8 inscrire">
-			<div class="col-sm-6 col-md-6 espace_connexion">
-				<div class="thumbnail membre">
-					<div>
-						<h3 class="underline">S'identifier</h3>
-					</div>
-					<p>Veuillez vous identifier pour accéder à votre compte :</p>
-					<form action="connexion.php" method="post"><!--Quand l'utilisateur aura rempli et valider ce bloc, ça le redirigera vers la page de son profil-->
-						<div class="form-group">
-							<label for="email">Email</label>
-							<input type="email" class="form-control" name="email_user" id="email" placeholder="email" value="<?php if(isset ($email)){echo $email;} ?>">
-						</div>
-						<div class="form-group">
-							<label for="password">Mot de passe</label>
-							<input type="password" class="form-control" name="password_user" id="password" placeholder="mot de passe">
-						</div>
-						<div class="form-group" id="form_checkbox">
-							<div class="checkbox">
-								<label data-toggle="tooltip" data-placement="bottom" title="Cocher cette case vous permet de rester connecté via cette appareil ! Toutefois veillez bien à vous déconnecter si vous utlisez un appareil publique.">
-								<input type="checkbox" id="checkbox" name="stayco" value="1" />  Rester connecter
-								</label>
-							</div>
-						</div>
-						<button type="submit" class="btn btn-default" name="valider">Se connecter</button><a href="oublie_mdp.php" type="button" class="btn btn-link">Mot de passe oublié ?</a>
-					</form>
-                    <?php 	if(isset($error_connexion)) { ?>
-                    <div class="alert alert-danger alert-dismissible" role="alert" style="margin-bottom:15px;">
-                        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                        <strong><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>&nbsp;</strong> <?= $error_connexion; ?>
+        <div class="contenu col-md-10 col-lg-offset-1">
+                <div class="col-sm-6 col-md-6 espace_connexion">
+                    <div class="thumbnail membre">
+                        <div>
+                            <h3 class="underline">S'identifier</h3>
+                        </div>
+                        <p>Veuillez vous identifier pour accéder à votre compte :</p>
+                        <form action="connexion.php" method="post"><!--Quand l'utilisateur aura rempli et valider ce bloc, ça le redirigera vers la page de son profil-->
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" name="email_user" id="email" placeholder="email" value="<?php if(isset ($email)){echo $email;} ?>">
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Mot de passe</label>
+                                <input type="password" class="form-control" name="password_user" id="password" placeholder="mot de passe">
+                            </div>
+                            <div class="form-group" id="form_checkbox">
+                                <div class="checkbox">
+                                    <label data-toggle="tooltip" data-placement="bottom" title="Cocher cette case vous permet de rester connecté via cette appareil ! Toutefois veillez bien à vous déconnecter si vous utlisez un appareil publique.">
+                                    <input type="checkbox" id="checkbox" name="stayco" value="1" />  Rester connecter
+                                    </label>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-default" name="valider">Se connecter</button><a href="oublie_mdp.php" type="button" class="btn btn-link">Mot de passe oublié ?</a>
+                        </form>
+                        <?php 	if(isset($error_connexion)) { ?>
+                        <div class="alert alert-danger alert-dismissible" role="alert" style="margin-bottom:15px;">
+                            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                            <strong><span class="glyphicon glyphicon-alert" aria-hidden="true"></span>&nbsp;</strong> <?= $error_connexion; ?>
+                        </div>
+                        <?php 	} ?>
                     </div>
-                    <?php 	} ?>
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-6 espace_connexion" style="padding-right:0;">
-				<div class="thumbnail membre">
-					<div>
-						<h3 class="underline">S'inscrire</h3>
-					</div>
-					<p>Veuillez renseigner votre adresse e-mail pour vous inscrire :</p>
-					<form method="POST" action="inscription.php"><!--Si l'utilisateur n'a pas de compte, rempli le champ email et appuie sur valider alors ça le redirigera vers la page inscription -->
-					  <div class="form-group">
-						<label for="email_user">Email</label>
-						<input type="email" class="form-control" id="email_user" name="email_user" placeholder="email">
-					  </div>
-					  <button type="submit" class="btn btn-default" name="valider">OK</button>
-					</form>
-				</div>
-			</div>
+                </div>
+                <div class="col-sm-6 col-md-6 espace_connexion" style="padding-right:0;">
+                    <div class="thumbnail membre">
+                        <div>
+                            <h3 class="underline">S'inscrire</h3>
+                        </div>
+                        <p>Veuillez renseigner votre adresse e-mail pour vous inscrire :</p>
+                        <form method="POST" action="inscription.php"><!--Si l'utilisateur n'a pas de compte, rempli le champ email et appuie sur valider alors ça le redirigera vers la page inscription -->
+                          <div class="form-group">
+                            <label for="email_user">Email</label>
+                            <input type="email" class="form-control" id="email_user" name="email_user" placeholder="email">
+                          </div>
+                          <button type="submit" class="btn btn-default" name="valider">OK</button>
+                        </form>
+                    </div>
+                </div>
 		</div>
-		<?php 
-			include_once("accessoires/chat.php");
+		<?php
 			include_once("accessoires/footer.html");
 		?>
 	</body>
