--- a/edit_actualite.html
+++ b/edit_actualite.html
@@ -33,11 +33,7 @@
 			include_once("accessoires/header.html");//logo du site
 			include_once("accessoires/menu.html");//barre de menu
 		?>
-		<div class="col-md-2">
-			<?php include_once("accessoires/calendrier_aside.php");
-				  include_once("accessoires/actualite_mini.php");?>
-		</div>
-		<div class="col-md-8 contenu">
+		<div class="col-md-10 col-lg-offset-1 contenu">
 			<h3 class="underline"><?php if(isset($_GET['modifier'])){ ?>Modifier un événement <?php } else { ?> Créer un évènement <?php } ?></h3>
 			<form action="edit_actualite.php<?php if(isset($_GET['modifier'])) echo "?modifier=".$id_event;?>" method="POST" class="form-horizontal">
 			    <div class="form-group">
@@ -127,8 +123,7 @@
 			  </div>
 			</form>
 		</div>
-		<?php 
-			include_once("accessoires/chat.php");
+		<?php
 			include_once("accessoires/footer.html");
 		?>
 		<script>
