--- a/edit_jeu.html
+++ b/edit_jeu.html
@@ -35,11 +35,7 @@
             include_once("accessoires/header.html");
             include_once("accessoires/menu.html");
         ?>
-        <div class="col-md-2">
-            <?php   include_once("accessoires/calendrier_aside.php");
-                    include_once("accessoires/actualite_mini.php");var_dump($_SESSION);?>
-        </div>
-        <div class="col-md-8 contenu">
+        <div class="col-md-10 col-lg-offset-1 contenu">
 			<h3 class="underline">
 				<?php if(isset ($_GET['jeu'])){?>
 				Modifier un jeu
