--- a/inscription.html
+++ b/inscription.html
@@ -48,11 +48,7 @@
 			include_once("accessoires/header.html");//logo du site
 			include_once("accessoires/menu.html");//barre de menu
 		?>
-        <div class="col-md-2">
-            <?php   include_once("accessoires/calendrier_aside.php");
-                    include_once("accessoires/actualite_mini.php");var_dump($_SESSION);?>
-        </div>
-        <div class="col-md-8 contenu">
+        <div class="col-md-10 col-lg-offset-1 contenu">
 			<div class="col-md-offset-3 col-md-6">
 				<h1 class="underline">Inscription</h1>
 				<?php if(!isset($success)) { ?>
@@ -206,8 +202,7 @@
 				<?php } ?>
 			</div>
         </div>
-		<?php 
-			include_once("accessoires/chat.php");
+		<?php
 			include_once("accessoires/footer.html");
 		?>
         <script type="text/javascript" src="js/compteur.js"></script>
