--- a/oublie_mdp.html
+++ b/oublie_mdp.html
@@ -48,11 +48,7 @@
             include_once("accessoires/header.html");//logo du site
             include_once("accessoires/menu.html");//barre de menu
         ?>
-        <div class="col-md-2">
-            <?php include_once("accessoires/calendrier_aside.php");
-                   include_once("accessoires/actualite_mini.php");?>
-        </div>
-        <div class="col-md-8 contenu">
+        <div class="col-md-10 col-lg-offset-1 contenu">
             <div class="col-md-offset-3 col-md-6">
                 <h3 class="underline">Mot de passe oublié</h3>
                 <?php if(!isset($page_ok)) { ?>
@@ -122,8 +118,7 @@
                 <?php } ?>
             </div>
         </div>
-		<?php 
-			include_once("accessoires/chat.php");
+		<?php
 			include_once("accessoires/footer.html");
 		?>
 <script type="text/javascript" src="js/compteur.js"></script>
